# CafeArchive

./: .README.md.swp  .gitignore  LICENSE.md  README.md  config.json  documentation.tex  pyproject.toml  requirements.txt
docs/: .gitignore  documentation.fdb_latexmk  documentation.fls  documentation.tex  graph.dot
src/ncafe_archiver/: main.py
