[tool.poetry]
name = "ncafe-archiver"
version = "0.1.0"
description = ""
authors = ["Julius Hamilton <juliushamilton100@gmail.com>"]
readme = "README.md"
packages = [{include = "ncafe_archiver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

